kubernetes/monitoring/node-exporter/node-exporter-deamonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter-daemonset
  namespace: grafana
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
      - image: localhost:5000/node-exporter:latest
        name: node-exporter
        ports:
        - containerPort: 9100
          hostPort: 9100
          name: node-exporter
        volumeMounts:
        - name: data-disk
          mountPath: /data-disk
          readOnly: true
        - name: root-disk
          mountPath: /root-disk
          readOnly: true
      volumes:
      - name: data-disk
        hostPath:
          path: /localdata
      - name: root-disk
        hostPath:
          path: /
      hostNetwork: true
      hostPID: true
